<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="action_sign_in">登录/注册</string>
    <string name="no_user">游客模式</string>

    <string name="welcome">欢迎使用HFLED</string>
    <string name="please_in_1">请输入注册用的邮箱</string>
    <string name="please_in_2">请输入密码</string>
    <string name="register">立即注册</string>
    <string name="change_password_1">忘记密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="book">已阅读并同意《用户协议》</string>

    <string name="register_text_1">注册HFLED账号</string>
    <string name="register_please_1">请输入用户名</string>
    <string name="register_please_2">请输入密码(8~16位)</string>
    <string name="register_please_3">确认密码</string>
    <string name="register_please_4">请输入邮箱</string>
    <string name="register_please_5">验证码</string>
    <string name="get_code">获取验证码</string>

    <string name="change_password_text_1">修改密码</string>
    <string name="change_password_please">请输入新密码(8~16位)</string>
    <string name="change_password_text_2">重置密码</string>

    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="register_short">注册</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="park_text_1">"素材"</string>
    <string name="park_text_2">"广场"</string>
    <string name="park_text_3">"推荐素材"</string>
    <string name="park_text_4">"热搜素材"</string>
    <string name="park_text_5">"文字素材"</string>
    <string name="park_size">"尺寸"</string>
    <string name="description_image_button1">"点击以查看详细信息1"</string>
    <string name="description_image_button2">"点击以查看详细信息2"</string>
    <string name="description_image_button3">"点击以查看详细信息3"</string>
    <string name="description_image_button4">"点击以查看详细信息4"</string>
    <string name="description_image_button5">"点击以查看详细信息5"</string>
    <string name="description_image_button6">"点击以查看详细信息6"</string>
    <string name="description_image_button7">"点击以查看详细信息7"</string>
    <string name="description_image_button8">"点击以查看详细信息8"</string>

    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="creation_center">创作中心</string>
    <string name="shopping">购物</string>
    <string name="profile">个人中心</string>
    <string name="video_request">请输入评论</string>
    <string name="sendout">发送</string>
    <string name="creation_center_text_1">创作</string>
    <string name="center_text_2">中心</string>
    <string name="doodle">涂鸦</string>
    <string name="animation">动画</string>
    <string name="music">音乐</string>
    <string name="image">图片</string>
    <string name="photo">拍照</string>
    <string name="text">文字</string>
    <string name="comment_text_1">John Doe</string>
    <string name="comment_text_2">This is a sample comment.</string>
    <string name="comment_text_3">1 day ago</string>
    <string name="home_text1">欢迎</string>
    <string name="home_text2">使用</string>
    <string name="search_result_text">搜索结果</string>
    <string name="search_result_icon">结果图标</string>
    <string name="search_result_headline">标题</string>
    <string name="search_result_describe">描述</string>
    <string name="search_result_no_result">没有找到相关结果</string>
    <string name="shopping_text_1">立即</string>
    <string name="shopping_text_2">购买</string>
    <string name="profile_text_1">游客</string>
    <string name="profile_text_2">中心</string>
    <string name="welcome_money">广告位招租</string>
    <string name="doodle_button_1">清除</string>
    <string name="doodle_button_2">撤销</string>
    <string name="doodle_button_3">重做</string>
    <string name="doodle_button_4">保存</string>
    <string name="doodle_button_5">返回创作中心</string>
    <string name="history">历史记录</string>
    <string name="local">本地资源</string>
    <string name="user_text_1">用户</string>
    <string name="user_text_2">昵称</string>
    <string name="user_text_logout">注销</string>
    <string name="user_text_exit">退出</string>
    <string name="bluetooth_switch_text">蓝牙开关</string>
    <string name="hint_nickname">请输入您想更改的昵称</string>
    <string name="select_avatar">点击以修改头像</string>
    <string name="change_password">修改密码</string>
    <string name="save_changes">保存修改</string>

    <string-array name="size_options">
        <item>大小</item>
        <item>小</item>
        <item>中</item>
        <item>大</item>
    </string-array>
    <string name="title_activity_up_load">upLoadActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="item_manager">设备管理</string>
    <string name="creation_check">资源管理</string>
    <string name="user_manage">用户管理</string>
    <string name="items">设备</string>
    <string name="manage">管理</string>
    <string name="machine_name">设备名称</string>
    <string name="comment_check">评论管理</string>
    <string name="comment">评论</string>
    <string name="comment_check_list">评论列表</string>
    <string name="nick_name">昵称</string>
    <string name="user_numbers">账号</string>
    <string name="comment_inside">评论具体内容</string>
    <string name="delete">删除</string>
    <string name="manage_user">用户</string>
    <string name="userlist">用户列表</string>
    <string name="resouces">资源</string>
    <string name="resource_list">资源列表</string>
    <string name="caution_resouce_list">被举报资源列表</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>