<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/login1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/register_text_1"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/newUsername"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="#EEFfFA"
            android:ems="10"
            android:hint="@string/register_please_1"
            android:inputType="text" />

        <EditText
            android:id="@+id/newUserpassword"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="#EEFfFA"
            android:ems="10"
            android:hint="@string/register_please_2"
            android:inputType="text|textPassword" />

        <EditText
            android:id="@+id/newUserpassword1"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="#EEFfFA"
            android:ems="10"
            android:hint="@string/register_please_3"
            android:inputType="text|textPassword" />

        <EditText
            android:id="@+id/newUseremail"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="#EEFfFA"
            android:ems="10"
            android:hint="@string/register_please_4"
            android:inputType="text|textEmailAddress" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/newCode"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#EEFfFA"
                android:ems="10"
                android:hint="@string/register_please_5"
                android:inputType="text" />

            <Button
                android:id="@+id/getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get_code" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/book" />

        <Button
            android:id="@+id/register"
            android:layout_width="220dp"
            android:layout_height="65dp"
            android:backgroundTint="#82F00D"
            android:text="@string/register_short"
            android:textColor="#101010"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>