<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/login1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/getUsername"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="#EEFfFA"
            android:ems="10"
            android:hint="@string/please_in_1"
            android:inputType="text"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/Password"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:background="#EEFfFA"
            android:ems="10"
            android:hint="@string/please_in_2"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/change_password_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change_password_1"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="220dp"
                android:layout_height="65dp"
                android:backgroundTint="#82F00D"
                android:text="@string/action_sign_in_short"
                android:textColor="#101010"
                android:textSize="20sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/book"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>