<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/comment_item_background">

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_text_1"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/commentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_text_2"
        android:textSize="14sp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/commentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_text_3"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        android:layout_marginTop="4dp" />
</LinearLayout>