<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationCenterActivity"
    tools:ignore="InvalidId">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_background"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/center_view1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/creation_center_text_1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/center_pic1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_create_top" />

        <TextView
            android:id="@+id/center_View2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/center_text_2"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1"/>


    <Button
        android:id="@+id/button_doodle"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_red"
        android:text="@string/doodle"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:drawableTop="@drawable/ic_doodle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_animation"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp" />

    <Button
        android:id="@+id/button_animation"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_orange"
        android:text="@string/animation"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:drawableTop="@drawable/ic_animation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_doodle"
        app:layout_constraintEnd_toStartOf="@id/button_music"
        android:layout_marginTop="150dp" />

    <Button
        android:id="@+id/button_music"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_yellow"
        android:text="@string/music"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:drawableTop="@drawable/ic_music"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_animation"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_green"
        android:drawableTop="@drawable/ic_image"
        android:text="@string/image"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/button_photo"
        app:layout_constraintTop_toBottomOf="@id/button_music" />

    <Button
        android:id="@+id/button_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/button_cyan"
        android:text="@string/photo"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:drawableTop="@drawable/ic_photo"
        app:layout_constraintTop_toBottomOf="@id/button_doodle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_image"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp" />

    <!-- 添加 BottomNavigationView -->
    <Button
        android:id="@+id/button_text"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_purple"
        android:drawableTop="@drawable/ic_text"
        android:text="@string/text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/button_image"
        app:layout_constraintTop_toBottomOf="@id/button_music" />



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:itemRippleColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>